[tool.poetry]
name = "embassy"
version = "0.1.0"
description = ""
authors = ["Mark Levitt <mark@marklevitt.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.2"
webdriver-manager = "^3.5.3"
undetected-chromedriver = "^3.1.3"
black = "^22.1.0"
httpx = "^0.22.0"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

